# bns-airdrop

./: .gitignore  Cargo.toml  README.md  input_data.txt
examples/: schema.rs
schema/: handle_msg.json
src/: contract.rs  msg.rs  state.rs
